--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 asgiref==3.5.2
 async-generator==1.10
 attrs==22.1.0
-backports.zoneinfo==0.2.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
 colorama==0.4.6
 Django==4.1.3
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 exceptiongroup==1.0.0
 h11==0.14.0
 idna==3.4
+joblib==1.2.0
 numpy==1.23.4
 outcome==1.2.0
 packaging==21.3
@@ -21,6 +22,7 @@ PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
+requests==2.28.1
 scikit-learn==1.1.3
 scipy==1.9.3
 selenium==4.5.0
@@ -28,12 +30,8 @@ six==1.16.0
 sklearn==0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
-requests==2.28.1
-selenium==4.5.0
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
 sqlparse==0.4.3
+threadpoolctl==3.1.0
 tqdm==4.64.1
 trio==0.22.0
 trio-websocket==0.9.2
@@ -41,4 +39,3 @@ tzdata==2022.6
 urllib3==1.26.12
 webdriver-manager==3.8.4
 wsproto==1.2.0
-django-cors-headers==3.13.0
